# real-time-ecommerce-data-pipeline

./: .gitignore  README.md  pyproject.toml
airflow/: Dockerfile  README.md  pyproject.toml  requirements.txt
airflow/dags/: alert_system_dag.py  data_archival_dag.py  data_quality_dag.py  health_check_kafka_server.py  kafka_local_monitoring.py  kafka_producer_control_dag.py  spark_job_control_dag.py
airflow/plugins/hooks/: kafka_hook.py  postgres_hook_ext.py
airflow/plugins/operators/: __init__.py  data_archival.py  data_quality.py  spark_job.py
airflow/plugins/sensors/: __init__.py  hadoop_sensor.py  kafka_sensor.py
airflow/tests/: conftest.py  test_dag_validation.py  test_hooks.py  test_operators.py
config/: base.py
src/: setup_db_schema.sql
src/kafka/: producer.py
src/load/: db_upserter.py
src/processing/: data_transformer.py  ip_enricher.py
src/report_dashboard/: dashboard.py
src/schema/: schemas.py
src/streaming/: spark_runner.py  spark_streaming.py
tests/kafka/: test_producer.py
tests/load/: test_db_upserter.py
tests/processing/: test_data_transformer.py  test_ip_enricher.py
