[project]
name = "glamira-airflow-pipeline"
version = "0.1.0"
description = "Airflow Orchestration Layer for Glamira Real-time Pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "apache-airflow==2.10.4",
    "apache-airflow-providers-postgres",
    "apache-airflow-providers-docker",
    "apache-airflow-providers-apache-kafka",
    "apache-airflow-providers-apache-spark==5.2.1",
    "pandas",
    "elasticsearch",
    "psycopg[binary]",
    "pyspark==3.5.1",
    "pytest",
    "pytest-mock",
]

[dependency-groups]
dev = [
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pylint]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]
